# CigerTool_Disk_Klonlama_hkannq

./: .gitignore  CigerTool.sln  Directory.Build.props  Directory.Packages.props  README.md  pyproject.toml  release.json
.github/workflows/: build-iso.yml  build-liveos-foundation.yml  build-release.yml
app/: README.md
app/CigerTool.App/: App.xaml  App.xaml.cs  CigerTool.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  (+3 more)
boot/: README.md
cigertool/: app_context.py  commands.py  config.py  launcher.py  logger.py  models.py
core/: README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_REWRITE_PLAN.md  BOOT_FLOW.md  CIGERTOOL_APP_PLAN.md  CIGERTOOL_DEPLOYMENT.md  CIGERTOOL_UI_PLAN.md  CIGERTOOL_UX_REDESIGN.md  CIGERTOOL_WINPE_NOTES.md  CLONE_MODEL.md  DISK_HEALTH_MODEL.md  EXECUTION_ENGINE_STATUS.md  FEATURE_SCOPE.md  FINAL_ARCHITECTURE.md  IMAGE_WORKFLOW.md  ISO_LIBRARY_PLAN.md  MIMARI.md  PAYLOAD_MODEL.md  PRODUCT_VISION.md  RELEASE_CHECKLIST.md  RELEASE_PLAN.md  RELEASE_SOURCE_MODEL.md  ROADMAP.md  STATUS.md  TEST_PLAN.md  TOOL_LAUNCHER_MODEL.md  USB_CREATOR.md  USER_USB_CREATION_FLOW.md  WINPE_BUILD.md  WORKSPACE_OS_PLAN.md
iso-library/: README.md
isos/: README.md
liveos/: README.md
os/: README.md
scripts/: build_iso.sh
tests/: README.md  test_generate_grub_menu.py  test_liveos_foundation.py  test_multiboot_service.py  test_preboot_assets.py  test_release_pipeline.py  test_runtime_integration.py  test_tool_launcher_service.py  test_tools_service.py  test_workspace_pipeline.py
tools/: README.md
usb/: README.md
winpe/: README.md
workspace/: README.md
(+195 files in other folders)
